check all request, endpoint, permission, refactor code continue